--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tremendousTriceratops",
   "version": "1.0.0",
-  "description": "",
+  "description": "recipe search app",
   "main": "index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
@@ -18,10 +18,13 @@
   },
   "dependencies": {
     "body-parser": "^1.17.2",
+    "bookshelf": "^0.11.1",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
+    "knex": "^0.14.0",
     "mongoose": "^4.8.6",
-    "mysql": "^2.13.0",
+    "mysql": "^2.15.0",
+    "pg": "^7.4.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
