--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql": "^2.15.0",
     "pg": "^7.4.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "request": "^2.83.0"
   }
 }
