--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "knex": "^0.14.0",
     "mongoose": "^4.8.6",
     "mysql": "^2.15.0",
+    "nodemon": "^1.12.1",
     "pg": "^7.4.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
